--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": ["es2015"],
   "plugins": [
-    ["babel-plugin-root-import"]
+    [
+      "babel-plugin-root-import",
+      "transform-runtime"
+    ]
   ]
 }
