--- a/package.json
+++ b/package.json
@@ -5,28 +5,60 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node app.js"
+    "start": "babel-node app.js",
+    "dev": "node build/dev-server.js",
+    "build": "node build/build.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^6.4.1",
     "babel-plugin-root-import": "^5.1.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.17.2",
+    "connect-history-api-fallback": "^1.3.0",
     "cookie-parser": "^1.4.3",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
     "csurf": "^1.9.0",
-    "eslint": "^4.0.0",
+    "eslint": "^4.1.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-html": "^3.0.0",
+    "eventsource-polyfill": "^0.9.6",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.4",
+    "log4js": "^1.1.1",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.5",
-    "sequelize": "^4.1.0",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "ora": "^1.3.0",
+    "sequelize": "^4.2.0",
     "standard": "^10.0.2",
-    "urlsafe-base64": "^1.0.0"
+    "url-loader": "^0.5.9",
+    "urlsafe-base64": "^1.0.0",
+    "vue": "^2.3.4",
+    "vue-loader": "^12.2.1",
+    "vue-router": "^2.6.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.4",
+    "webpack": "^2.6.1",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0"
   },
-  "dependencies": {
-    "log4js": "^1.1.1"
-  }
+  "dependencies": {}
 }
