--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node app.js",
+    "start": "babel-node server.js",
+    "serve": "babel-node server.js",
     "dev": "node build/dev-server.js",
     "build": "node build/build.js"
   },
@@ -24,6 +25,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "cookie-parser": "^1.4.3",
     "copy-webpack-plugin": "^4.0.1",
+    "cors": "^2.8.3",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
     "csurf": "^1.9.0",
@@ -40,8 +42,10 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
     "log4js": "^1.1.1",
+    "materialize-css": "^0.98.1",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.5",
+    "nouislider": "^9.2.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.3.0",
@@ -51,6 +55,7 @@
     "urlsafe-base64": "^1.0.0",
     "vue": "^2.3.4",
     "vue-loader": "^12.2.1",
+    "vue-material": "^0.7.4",
     "vue-router": "^2.6.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
@@ -58,7 +63,8 @@
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "wnumb": "^1.1.0"
   },
   "dependencies": {}
 }
